--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
