--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.3",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "webpack-cli": "^6.0.1"
   }
 }
