--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "recharts": "^3.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^7.16.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
