fix 오류잡는 중..

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "13.4.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-storybook": "^9.1.6",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "playwright": "^1.55.0",
     "postcss": "^8.5.6",
