--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.539.0",
     "next": "15.4.2",
+    "pretendard": "^1.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
